Fix styles for shadow to be visible

--- a/src/widgets/ui/team/styles.scss
+++ b/src/widgets/ui/team/styles.scss
@@ -34,7 +34,7 @@
 	@include breakpoints.respond-until(breakpoints.$phone) {
 		width: 100%;
 		height: 715px;
-		padding: 56px 20px;
+		padding: 56px 0 0 0;
 	}
 }
 
@@ -73,7 +73,13 @@
 	}
 
 	@include breakpoints.respond-until(breakpoints.$phone) {
-		@include typo.typography('Mobile/Accent');
+		font-family: VTB Group UI;
+		font-weight: 400;
+		font-style: Book;
+		font-size: 80px;
+		leading-trim: NONE;
+		line-height: 120%;
+		letter-spacing: -4%;
 	}
 }
 
@@ -114,7 +120,7 @@
 	@include breakpoints.respond-until(breakpoints.$phone) {
 		display: flex;
 		flex-direction: column;
-		gap: 16px;
+		gap: 20px;
 		margin-top: 16px;
 	}
 }
@@ -124,7 +130,7 @@
 }
 
 .cells-box-intro {
-  text-align: center;
+	text-align: center;
 	box-sizing: border-box;
 	padding: 7px 0;
 	display: flex;
@@ -136,16 +142,18 @@
 	@include breakpoints.respond-until(breakpoints.$phone) {
 		width: 335px;
 		height: 155px;
-    align-self: center;
+		align-self: center;
 	}
 }
 
 /* Горизонтальный скролл только на мобильных */
 .cells-box-cards-scroll {
+	margin-top: -56px;
+	padding: 56px 20px;
 	display: flex;
 	flex-direction: row;
 	overflow-x: auto;
-  overflow-y: visible;
+	overflow-y: visible;
 	gap: 12px;
 	-webkit-overflow-scrolling: touch; /* плавность на iOS */
 }
